[package]
name = "quantum-bits"
version = "0.1.0"
authors = ["Debasish Ray Chawdhuri <debasish@geekyarticlesc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.2.4"
[dependencies.linearalgebra]
default_features = false
git = 'https://github.com/debasish-raychawdhuri/linearalgebra-rust.git'
rev = '2a121f3d3c16c3c9dd85e0b15fcc8b4274fd7fb1'
