[package]
name = "quantum-bits"
version = "0.1.0"
authors = ["Debasish Ray Chawdhuri <debasish@geekyarticles.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.2.4"
rand = "0.7.3"
[dependencies.linearalgebra]
default_features = false
git = 'https://github.com/debasish-raychawdhuri/linearalgebra-rust.git'
rev = 'd4b2122f65d145565960dbe5a80fc7d9bf4220d5'
